--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "formik": "^2.2.9",
     "nanoid": "^4.0.0",
+    "normalize.css": "^8.0.1",
     "notiflix": "^3.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
@@ -23,7 +24,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",   
+    "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
