--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
+    "react-loader-spinner": "^6.1.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
