--- a/package.json
+++ b/package.json
@@ -53,5 +53,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-plugin-react-svg": "^3.0.3",
+    "react-svg-loader": "^3.0.3"
   }
 }
