--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
